--- a/platform/admin/core/admin-core-jolokia/pom.xml
+++ b/platform/admin/core/admin-core-jolokia/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>jolokia-osgi</artifactId>
             <version>1.6.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.ops4j.pax.web</groupId>
+            <artifactId>pax-web-extender-whiteboard</artifactId>
+            <version>${pax.web.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
