--- a/distribution/docs/pom.xml
+++ b/distribution/docs/pom.xml
@@ -70,7 +70,6 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>build-helper-maven-plugin</artifactId>
-                        <version>1.5</version>
                         <executions>
                             <execution>
                                 <id>attach-docs-pdf</id>
@@ -215,7 +214,7 @@
                     <dependency>
                         <groupId>org.asciidoctor</groupId>
                         <artifactId>asciidoctorj</artifactId>
-                        <version>2.5.13</version>
+                        <version>${asciidoctorj.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -279,11 +278,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.5.3</version>
                 <executions>
                     <execution>
                         <configuration>
-                            <descriptor>${project.basedir}/src/assembly/asciidocs.xml</descriptor>
+                            <descriptors>
+                                <descriptor>${project.basedir}/src/assembly/asciidocs.xml</descriptor>
+                            </descriptors>
                             <outputDirectory>${project.build.directory}/adoc-files</outputDirectory>
                         </configuration>
                         <id>include-adocs</id>
@@ -294,7 +294,9 @@
                     </execution>
                     <execution>
                         <configuration>
-                            <descriptor>${project.basedir}/src/assembly/images.xml</descriptor>
+                            <descriptors>
+                                <descriptor>${project.basedir}/src/assembly/images.xml</descriptor>
+                            </descriptors>
                             <outputDirectory>${project.build.directory}/images</outputDirectory>
                         </configuration>
                         <id>include-images</id>
@@ -305,7 +307,9 @@
                     </execution>
                     <execution>
                         <configuration>
-                            <descriptor>${project.basedir}/src/assembly/jdocs.xml</descriptor>
+                            <descriptors>
+                                <descriptor>${project.basedir}/src/assembly/jdocs.xml</descriptor>
+                            </descriptors>
                             <outputDirectory>${project.build.directory}/export-templates</outputDirectory>
                         </configuration>
                         <id>include-templates</id>
@@ -316,7 +320,9 @@
                     </execution>
                     <execution>
                         <configuration>
-                            <descriptor>${project.basedir}/src/assembly/docs-export.xml</descriptor>
+                            <descriptors>
+                                <descriptor>${project.basedir}/src/assembly/docs-export.xml</descriptor>
+                            </descriptors>
                             <outputDirectory>${project.build.directory}/export-docs</outputDirectory>
                         </configuration>
                         <id>include-docs</id>
@@ -330,7 +336,6 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>1.5</version>
                 <executions>
                     <execution>
                         <id>attach-docs-html</id>
