--- a/platform/security/filter/security-filter-web-sso/pom.xml
+++ b/platform/security/filter/security-filter-web-sso/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>security-handler-impl</artifactId>
         </dependency>
         <dependency>
+            <groupId>ddf.security.core</groupId>
+            <artifactId>security-core-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
