Replace ddf-admin-ui with ddf-ui/admin (kanri)

--- a/distribution/ddf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/distribution/ddf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -20,9 +20,7 @@
 #
 # Comma separated list of features repositories to register by default
 #
-featuresRepositories= \
- mvn:ddf.features/install-profiles/${project.version}/xml/features, \
- mvn:org.codice.ddf/ui/${ddf-admin-ui.version}/xml/features
+featuresRepositories=mvn:ddf.features/install-profiles/${project.version}/xml/features
 
 #
 # Comma separated list of features to install at startup
@@ -48,7 +46,6 @@ featuresRepositories= \
 # TODO DDF-3072 Investigate improvements of this configuration.
 featuresBoot= \
  (ddf-boot-features, \
- ui, \
  admin-modules-installer)
 
 #
