--- a/pom.xml
+++ b/pom.xml
@@ -181,7 +181,6 @@
         <countryconverter.version>0.1.8</countryconverter.version>
         <cryptomator.version>1.5.2</cryptomator.version>
         <cxf.version>3.5.10</cxf.version>
-        <ddf-admin-ui.version>2.25.0</ddf-admin-ui.version>
         <decanter.version>2.9.0</decanter.version>
         <dropwizard.version>4.1.25</dropwizard.version>
         <equinox.version>3.17.200</equinox.version>
@@ -238,6 +237,7 @@
         <jts.spatial4j.version>1.17.0</jts.spatial4j.version>
         <jvnet-ogc.version>2.6.1</jvnet-ogc.version>
         <jwnl.version>1.3.3</jwnl.version>
+        <kanri.version>5.2.8</kanri.version>
         <karaf.version>4.3.10</karaf.version>
         <jansi.version>2.4.0</jansi.version>
         <org.osgi.util.promise.version>1.2.0</org.osgi.util.promise.version>
