--- a/pom.xml
+++ b/pom.xml
@@ -119,9 +119,9 @@
         <spock.version>2.3-groovy-3.0</spock.version>
         <mockito.version>4.9.0</mockito.version>
         <pax.exam.version>4.13.5</pax.exam.version>
-        <pax.logging.version>2.2.0</pax.logging.version>
-        <pax.url.version>2.6.12</pax.url.version>
-        <pax.web.version>8.0.15</pax.web.version>
+        <pax.logging.version>2.2.7</pax.logging.version>
+        <pax.url.version>2.6.14</pax.url.version>
+        <pax.web.version>8.0.27</pax.web.version>
         <restito.version>1.1.0</restito.version>
         <restassured.version>3.3.0</restassured.version>
         <groovy.version>3.0.12</groovy.version>
@@ -133,7 +133,7 @@
         <project.report.output.directory>project-info</project.report.output.directory>
 
         <!--Documentation properties-->
-        <asciidoctor.maven.plugin.version>2.2.2</asciidoctor.maven.plugin.version>
+        <asciidoctor.maven.plugin.version>2.2.5</asciidoctor.maven.plugin.version>
         <asciidoctorj.diagram.version>2.2.3</asciidoctorj.diagram.version>
         <asciidoctorj.version>2.5.7</asciidoctorj.version>
         <jruby.version>9.2.20.1</jruby.version>
@@ -141,12 +141,12 @@
         <abdera.osgi.version>1.1.3_2</abdera.osgi.version>
         <abdera.version>1.1.3</abdera.version>
         <antlr.version>4.3</antlr.version>
-        <asm.version>9.5</asm.version>
+        <asm.version>9.6</asm.version>
         <awaitility.version>3.1.6</awaitility.version>
-        <bouncy.version>1.70</bouncy.version>
+        <bouncy.version>1.80</bouncy.version>
         <cal10n.version>0.8.1</cal10n.version>
         <cal10n.thirdparty.bundle.version>${cal10n.version}_1</cal10n.thirdparty.bundle.version>
-        <commons-compress.version>1.23.0</commons-compress.version>
+        <commons-compress.version>1.26.1</commons-compress.version>
         <commons.fileupload.version>1.5</commons.fileupload.version>
         <commons-codec.version>1.15</commons-codec.version>
         <commons-collections.version>3.2.2</commons-collections.version>
@@ -155,10 +155,10 @@
         <commons-csv.version>1.4</commons-csv.version>
         <commons-digester.version>1.8.1</commons-digester.version>
         <commons-exec.version>1.3</commons-exec.version>
-        <commons-io.version>2.13.0</commons-io.version>
+        <commons-io.version>2.15.1</commons-io.version>
         <commons-lang.version>2.6</commons-lang.version>
-        <commons-lang3.version>3.12.0</commons-lang3.version>
-        <commons-logging.version>1.2</commons-logging.version>
+        <commons-lang3.version>3.14.0</commons-lang3.version>
+        <commons-logging.version>1.3.1</commons-logging.version>
         <commons-math3.version>3.6.1</commons-math3.version>
         <commons-net.version>3.5</commons-net.version>
         <countryconverter.version>0.1.8</countryconverter.version>
@@ -203,11 +203,11 @@
         <jts.geotools.version>1.19.0</jts.geotools.version>
         <jts.spatial4j.version>1.17.0</jts.spatial4j.version>
         <jwnl.version>1.3.3</jwnl.version>
-        <karaf.version>4.4.3</karaf.version>
-        <jansi.version>2.4.0</jansi.version>
-        <org.osgi.util.promise.version>1.2.0</org.osgi.util.promise.version>
+        <karaf.version>4.4.6</karaf.version>
+        <jansi.version>2.4.1</jansi.version>
+        <org.osgi.util.promise.version>1.3.0</org.osgi.util.promise.version>
         <org.osgi.util.function.version>1.2.0</org.osgi.util.function.version>
-        <apache-log4j.version>2.17.0</apache-log4j.version>
+        <apache-log4j.version>2.24.1</apache-log4j.version>
         <logback.classic.version>1.2.3</logback.classic.version>
         <logback.version>1.2.3</logback.version>
         <mariadb.version>2.4.1</mariadb.version>
@@ -244,9 +244,10 @@
         <solr.httpcore.version>4.4.16</solr.httpcore.version>
         <solr.httpmime.version>4.5.14</solr.httpmime.version>
         <solr.jetty.version>10.0.12</solr.jetty.version>
-        <solr.zookeeper.version>3.8.1</solr.zookeeper.version>
+        <solr.zookeeper.version>3.8.3</solr.zookeeper.version>
         <solr.spatial4j.version>0.8</solr.spatial4j.version>
         <spatial4j.version>0.8</spatial4j.version>
+        <spifly.version>1.3.7</spifly.version>
         <tika.version>2.8.0</tika.version>
         <tika.slf4j.version>2.0.7</tika.slf4j.version>
         <usng4j.version>0.4</usng4j.version>
@@ -705,7 +706,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.10.1</version>
+                    <version>3.11.0</version>
                     <configuration>
                         <source>${maven.compiler.source}</source>
                         <target>${maven.compiler.target}</target>
@@ -778,7 +779,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>build-helper-maven-plugin</artifactId>
-                    <version>3.3.0</version>
+                    <version>3.4.0</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-javadoc-plugin</artifactId>
@@ -806,7 +807,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
-                    <version>3.1.0</version>
+                    <version>3.4.1</version>
                     <dependencies>
                         <dependency>
                             <groupId>ddf.support</groupId>
