upgrade jakarta.ws.rs and fix solr dependencies issue

--- a/catalog/rest/catalog-rest-api/pom.xml
+++ b/catalog/rest/catalog-rest-api/pom.xml
@@ -29,8 +29,8 @@
             <artifactId>catalog-core-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>javax.ws.rs-api</artifactId>
+            <groupId>jakarta.ws.rs</groupId>
+            <artifactId>jakarta.ws.rs-api</artifactId>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
