--- a/catalog/core/catalog-core-downloadaction/pom.xml
+++ b/catalog/core/catalog-core-downloadaction/pom.xml
@@ -33,8 +33,8 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>javax.ws.rs-api</artifactId>
+            <groupId>jakarta.ws.rs</groupId>
+            <artifactId>jakarta.ws.rs-api</artifactId>
         </dependency>
         <dependency>
             <groupId>ddf.catalog.core</groupId>
