--- a/catalog/spatial/wfs/spatial-wfs-featuretransformer-api/pom.xml
+++ b/catalog/spatial/wfs/spatial-wfs-featuretransformer-api/pom.xml
@@ -36,8 +36,8 @@
             <artifactId>commons-collections4</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>javax.ws.rs-api</artifactId>
+            <groupId>jakarta.ws.rs</groupId>
+            <artifactId>jakarta.ws.rs-api</artifactId>
         </dependency>
         <dependency>
             <groupId>javax.annotation</groupId>
