--- a/platform/admin/ui/pom.xml
+++ b/platform/admin/ui/pom.xml
@@ -40,8 +40,8 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>javax.ws.rs-api</artifactId>
+            <groupId>jakarta.ws.rs</groupId>
+            <artifactId>jakarta.ws.rs-api</artifactId>
             <version>${javax.ws.rs.version}</version>
         </dependency>
         <dependency>
