--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -77,8 +77,8 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>javax.ws.rs</groupId>
-                <artifactId>javax.ws.rs-api</artifactId>
+                <groupId>jakarta.ws.rs</groupId>
+                <artifactId>jakarta.ws.rs-api</artifactId>
                 <version>${javax.ws.rs.version}</version>
             </dependency>
             <dependency>
