--- a/platform/security/servlet/security-servlet-session-expiry/pom.xml
+++ b/platform/security/servlet/security-servlet-session-expiry/pom.xml
@@ -28,8 +28,8 @@
             <artifactId>javax.servlet-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>javax.ws.rs-api</artifactId>
+            <groupId>jakarta.ws.rs</groupId>
+            <artifactId>jakarta.ws.rs-api</artifactId>
         </dependency>
         <dependency>
             <groupId>ddf.platform.security</groupId>
