--- a/platform/security/servlet/security-servlet-web-socket-api/pom.xml
+++ b/platform/security/servlet/security-servlet-web-socket-api/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>websocket-common</artifactId>
             <version>${jetty.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty.websocket</groupId>
+            <artifactId>websocket-api</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
