--- a/distribution/test/test-rest-endpoint/pom.xml
+++ b/distribution/test/test-rest-endpoint/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>jakarta.ws.rs</groupId>
             <artifactId>jakarta.ws.rs-api</artifactId>
-            <version>2.1.6</version>
+            <version>${javax.ws.rs.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.cxf</groupId>
