--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ package-lock.json
 atlassian-ide-plugin.xml
 *.sonar-ide.properties
 **/webapp/css/styles.css
+ddf-deplist.out
 platform/solr/**/overlays
 distribution/docs/src/main/resources/content/**/.asciidoctor
 distribution/docs/src/main/resources/content/**/*.png
