--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -35,6 +35,7 @@
         <module>ddf-catalog</module>
         <module>ddf</module>
         <module>docker</module>
+        <module>software-list</module>
         <!--Test needs to be the last module because it depends on artifacts from earlier modules-->
         <module>test</module>
     </modules>
