--- a/features/pom.xml
+++ b/features/pom.xml
@@ -34,8 +34,7 @@
         <module>solr</module>
         <module>admin</module>
         <module>apps</module>
-<!--        TODO: fix solrProvider bundle starting in kernel dist-->
-<!--        <module>install-profiles</module>-->
+        <module>install-profiles</module>
     </modules>
 
     <properties>
