--- a/distribution/test/test-rest-endpoint/pom.xml
+++ b/distribution/test/test-rest-endpoint/pom.xml
@@ -40,9 +40,9 @@
     </build>
     <dependencies>
         <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>javax.ws.rs-api</artifactId>
-            <version>2.1</version>
+            <groupId>jakarta.ws.rs</groupId>
+            <artifactId>jakarta.ws.rs-api</artifactId>
+            <version>${javax.ws.rs.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.cxf</groupId>
