Exclude netty CVE artifacts

--- a/distribution/ddf/pom.xml
+++ b/distribution/ddf/pom.xml
@@ -277,6 +277,12 @@
             <version>${project.version}</version>
             <type>xml</type>
             <classifier>features</classifier>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.netty</groupId>
+                    <artifactId>netty-transport</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>ddf.features</groupId>
