Enforcing correct version for json-smart library and suppressing associated CVEs

--- a/catalog/plugin/catalog-plugin-oauth/pom.xml
+++ b/catalog/plugin/catalog-plugin-oauth/pom.xml
@@ -123,6 +123,7 @@
                         </Embed-Dependency>
                         <Import-Package>
                             org.codice.ddf.security.token.storage.api,
+                            net.minidev.*;version="${json-smart.version}",
                             *
                         </Import-Package>
                     </instructions>
