--- a/platform/security/core/security-core-impl/pom.xml
+++ b/platform/security/core/security-core-impl/pom.xml
@@ -234,6 +234,7 @@
                             !org.mockito*,
                             !org.hamcrest*,
                             !org.junit*,
+                            net.minidev.*;version="${json-smart.version}",
                             *
                         </Import-Package>
                     </instructions>
