--- a/platform/security/core/security-core-services/pom.xml
+++ b/platform/security/core/security-core-services/pom.xml
@@ -254,6 +254,7 @@
                             System bundle.
                             -->
                             javax.xml.stream;version="1.0",
+                            net.minidev.*;version="${json-smart.version}",
                             *
                         </Import-Package>
                         <Embed-Dependency>
