--- a/platform/security/realm/security-realm-oidc/pom.xml
+++ b/platform/security/realm/security-realm-oidc/pom.xml
@@ -141,6 +141,7 @@
                         </Embed-Dependency>
                         <Import-Package>
                             !org.springframework.security.crypto.password,
+                            net.minidev.*;version="${json-smart.version}",
                             *
                         </Import-Package>
                     </instructions>
