--- a/platform/security/handler/security-handler-api/pom.xml
+++ b/platform/security/handler/security-handler-api/pom.xml
@@ -69,6 +69,10 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+                        <Import-Package>
+                            net.minidev.*;version="${json-smart.version}",
+                            *
+                        </Import-Package>
                         <Export-Package>
                             org.codice.ddf.security.handler.api
                         </Export-Package>
