--- a/catalog/pom.xml
+++ b/catalog/pom.xml
@@ -375,6 +375,17 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.ops4j.pax.web</groupId>
+            <artifactId>pax-web-spi</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.core</artifactId>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
     <modules>
         <module>measure</module>
         <module>common</module>
