--- a/catalog/rest/pom.xml
+++ b/catalog/rest/pom.xml
@@ -29,5 +29,6 @@
         <module>catalog-rest-endpoint</module>
         <module>catalog-rest-service-impl</module>
         <module>catalog-rest-api</module>
+        <module>ddf-default-context</module>
     </modules>
 </project>
