Adds geotools support for csv and shp files

--- a/catalog/core/catalog-core-impl/filter-proxy/pom.xml
+++ b/catalog/core/catalog-core-impl/filter-proxy/pom.xml
@@ -40,6 +40,21 @@
         </dependency>
         <dependency>
             <groupId>org.geotools</groupId>
+            <artifactId>gt-app-schema</artifactId>
+            <version>${org.geotools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-csv</artifactId>
+            <version>${org.geotools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-shapefile</artifactId>
+            <version>${org.geotools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
             <artifactId>gt-referencing</artifactId>
             <version>${org.geotools.version}</version>
         </dependency>
