[2.29.x] Fix itests for downstream projects

--- a/distribution/test/itests/test-itests-common/pom.xml
+++ b/distribution/test/itests/test-itests-common/pom.xml
@@ -196,6 +196,7 @@
                         </Bundle-SymbolicName>
                         <Bundle-Name>${project.name}</Bundle-Name>
                         <Import-Package>
+                            ddf.security,
                             org.junit.*,
                             org.hamcrest.*;version=1.3,
                             org.awaitility.*,
