Fix geotools to handle GML files.

--- a/catalog/core/catalog-core-impl/filter-proxy/pom.xml
+++ b/catalog/core/catalog-core-impl/filter-proxy/pom.xml
@@ -49,6 +49,11 @@
             <version>${org.geotools.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-epsg-hsql</artifactId>
+            <version>${org.geotools.version}</version>
+        </dependency>
+        <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-api</artifactId>
         </dependency>
